book/tests/snapshots/snapshot__run_display_reference_prql@select-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/transforms/select-0.prql
---
prql dialect:generic

from `employees`
select `first_name`


