book/tests/snapshots/snapshot__run_display_reference_prql@select-1.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/transforms/select-1.prql
---
from employees
select [
  first_name,
  last_name,
]



