book/tests/snapshots/snapshot__run_display_reference_prql@select-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/transforms/select-2.prql
---
prql dialect: generic

from employees
select name = f"{first_name} {last_name}"

