book/tests/snapshots/snapshot__run_display_reference_prql@sort-2.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/transforms/sort-2.prql
---
from employees
sort [
  age,
  -tenure,
  salary,
]



