book/tests/snapshots/snapshot__run_display_reference_prql@sql-parameters-0.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/examples/sql-parameters-0.prql
---
from mytable
filter id == $1



